"link to this repo"

--- a/helloworld.html
+++ b/helloworld.html
@@ -40,6 +40,11 @@ $(document).ready(function(){
 
 <br/>  
 <br/>
+I've checked this example source into here...tweak it and I'll redeploy:
+<br/>
+<a href="https://github.com/jacobheric/now_chat_helloworld">https://github.com/jacobheric/now_chat_helloworld</a>
+<br/>
+<br/>
 written with:  <a href="http://nowjs.com/">http://nowjs.com/</a>
 <br/>
 runs on: <a href="http://nodejs.org/">http://nodejs.org/</a>
@@ -48,4 +53,4 @@ runs on: <a href="http://nodejs.org/">http://nodejs.org/</a>
 
 </body>
 </html>
-          
+    
