making links external (in a non-compliant sort of way)

--- a/helloworld.html
+++ b/helloworld.html
@@ -50,12 +50,12 @@ $(document).ready(function(){
 <br/>
 I've checked this example source into here...tweak it and I'll redeploy:
 <br/>
-<a href="https://github.com/jacobheric/now_chat_helloworld">https://github.com/jacobheric/now_chat_helloworld</a>
+<a href="https://github.com/jacobheric/now_chat_helloworld" target="_blank">https://github.com/jacobheric/now_chat_helloworld</a>
 <br/>
 <br/>
-written with:  <a href="http://nowjs.com/">http://nowjs.com/</a>
+written with:  <a href="http://nowjs.com/" target="_blank">http://nowjs.com/</a>
 <br/>
-runs on: <a href="http://nodejs.org/">http://nodejs.org/</a>
+runs on: <a href="http://nodejs.org/" target="_blank">http://nodejs.org/</a>
 <br/>
 <br/>
 
