--- a/helloworld.html
+++ b/helloworld.html
@@ -44,7 +44,7 @@ $(document).ready(function(){
 <body>
 <div id="messages"></div>
 <input type="text" id="text-input">
-<input type="button" value="Send" id="send-button">
+<input type="button" value="Send" id="send-button" style:'border-radius:5px'>
 
 <br/>  
 <br/>
