--- a/helloworld.html
+++ b/helloworld.html
@@ -5,10 +5,13 @@
 <style type="text/css">
 	html, body {
     		background: #f3f3f3;
+    		font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
+    		font-size: 15px;
      	}
 
 	input {
 		 border: 1px solid #ccc;
+		 border-radius:5px;
 	}
 
         #text-input {width: 250px;}
@@ -44,7 +47,7 @@ $(document).ready(function(){
 <body>
 <div id="messages"></div>
 <input type="text" id="text-input">
-<input type="button" value="Send" id="send-button" style:'border-radius:5px'>
+<input type="button" value="Send" id="send-button">
 
 <br/>  
 <br/>
