--- a/helloworld.html
+++ b/helloworld.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>nowjs test</title>
+<title>nulchat</title>
 <style type="text/css">
 	html, body {
     		background: #f3f3f3;
