update github link reflecting name

--- a/nulchat.html
+++ b/nulchat.html
@@ -88,7 +88,7 @@ $(document).ready(function(){
 <br/>
 I've checked this example source into here...tweak it and I'll redeploy:
 <br/>
-<a href="https://github.com/jacobheric/now_chat_helloworld" target="_blank">https://github.com/jacobheric/now_chat_helloworld</a>
+<a href="https://github.com/jacobheric/nulchat" target="_blank">https://github.com/jacobheric/nulchat</a>
 <br/>
 <br/>
 written with:  <a href="http://nowjs.com/" target="_blank">http://nowjs.com/</a>
